Prepare for v2.0.1 release